# UHD2NAS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  help.html  resources.qrc  uhd2nas.rc
src/: cropdetector.cpp  cropdetector.h  doviprocessor.cpp  doviprocessor.h  encoderengine.cpp  encoderengine.h  main.cpp  mainwindow.cpp  mainwindow.h  processrunner.cpp  processrunner.h  settingsdialog.cpp  settingsdialog.h  templatemanager.cpp  templatemanager.h
